--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_database: ^10.2.2
   web_socket_channel: ^2.4.0
   intl: ^0.18.1
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
