--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   web_socket_channel: ^2.4.0
   intl: ^0.18.1
   http: ^0.13.3
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
